# itu-sdse-project

./: .gitignore
.github/workflows/: test_action.yml
cookie_eaters/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cookie_eaters/code/data/: 01_setup_data.py  02_helper_functions.py  03_preprocessing.py  B_setup_data.py  C_preprocessing.py  artifacts.py  load_data.py  min_max.py  preprocessing.py
cookie_eaters/code/features/: D_feature_engineering.py  feature_extraction.py  feature_selection.py  helper_functions.py
cookie_eaters/code/models/: 05_setup_experiment.py  07_model_train.py  08_evaluation.py  09_Sklearin_logistic_regression  10_save_artifacts.py  13_compare_register.py  14_deploy.py  E_setup_experiment.py  F_load_train_data.py  F_prepare_train_data.py  G_XGBoost_train_and_evaluate  G_XGBoost_train_and_evaluate.py  G_model_selection.py  H_evaluation.py  H_model_training.py  H_sklearn_train_and_evaluate.py  I_save_artifacts.py  J_mlflow_model_selection.py  J_save_artifacts.py  K_check_production_model.py  K_mlflow_model_selection.py  L_check_production_model.py  L_compare_and_register_model.py  M_compare_and_register.py  M_model_staging.py  N_model_staging.py  compare_register.py  config.py  deploy.py  evaluation.py  load_train_data.py  mlflow_experiment.py  mlplow_setup.py  model_train.py  production.py  save_best_model.py  train_data.py
dagger/: go.mod  main.go  pipeline.go
notebooks/: .gitignore  main.ipynb
notebooks/.dvc/: config
