[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cookie_eaters"
version = "0.0.1"
description = "Aminna \u0026 Patricia eat cookies"
authors = [
  { name = "Amina \u0026 Patricia" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["cookie_eaters"]
force_sort_within_sections = true


